# bizcal

./: LICENSE  Makefile  README.md  pyproject.toml
bizcal/: __init__.py
env/: petal.freeze  petal.json
test/: basic.py
